examples/test/testpolicy515.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy515
  namespace: namespace300
spec:
  podSelector:
    matchLabels:
      key9: value42
      key23: value7
      key26: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value6
          key39: value33
          key23: value39
      podSelector:
        matchLabels:
          key15: value18
